# chatbot-horror-movies

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .trivyignore  CLAUDE.md  INCIDENT_REPORT.md  README.md  bandit.yaml  docker-compose.gpu.yml  docker-compose.yml  init_pgvector.sql  null  package-lock.json  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-cpu.txt  requirements-dev.txt  requirements-gpu.txt  requirements.txt  scripts_pre-commit.txt  suppression.xml
.github/workflows/: ci.yml  frontend-cd.yml  mlops.yml
BENCHMARK/: benchmark_horrorbot.md  benchmark_results.md  demo_questions.md
data/checkpoints/: README.md
docker/api/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/grafana/dashboards/: api.json  infrastructure.json  llm.json  rag.json
docker/init-db/: 01_extensions.sql  02_horrorbot_schema.sql  03_vectors_schema.sql  04_seed_data.sql  05_search_vectors.sql  06_vector_index_hnsw.sql  07_title_fr_fallback.sql  08_rag_vote_count.sql  09_embedding_768.sql
docker/prometheus/: alert_rules.yml  prometheus.test.yml  prometheus.yml
docs/: API.md  DEPLOYMENT.md  FRONTEND.md  MONITORING.md  QUICKSTART.md  SECURITY.md
docs/database/: DATABASE_IMPORT.md  DATABASE_INSTALL.md  MCD_MERISE.md  MLD.md
docs/mlops-reports/: LATEST.md  ab-embedding-20260413-151036.md  report-20260309-094809.md  report-20260312-095632.md  report-20260312-100148.md  report-20260313-132106.md  report-20260315-043037.md  report-20260322-041621.md  report-20260324-104512.md  report-20260329-043159.md  report-20260405-043119.md  report-20260412-044133.md  report-20260413-075840.md
docs/rapports/: rapport_horrorbot.md  rapport_horrorbot_e1_valide.md
docs/rgpd/: RGPD_PROCEDURES.md  RGPD_REGISTRE.md
docs/veille/: 2025-11-moteurs-inference-llm.md  2025-12-ai-act-chatbots.md  2025-12-hebergement-docker-lowcost.md  2026-01-rgpd-prompts-ia.md  2026-02-choix-modele-llm-qwen.md
incidents/: INCIDENT_REPORT.md
scripts/: SCRIPTS_README.md  ab_embedding_models.py  audit_pii.py  backup_db.sh  clean_checkpoints.py  extract_fr_queries.py  generate_incident_traffic.py  generate_sample_embeddings.py  mlops_report.py
scripts/benchmark/: diagnose_recall.py  results_20260521.md  results_20260522.md  run_benchmark.py  sweep_hyperparams.py  sweep_popularity_weight.py
scripts/maintenance/: clean_logs.py
scripts/migrations/: backfill_multilingual_20260416.py  backfill_rag_vote_count_20260520.py  purge_short_films_20260522.py  regenerate_embeddings_20260416.py
scripts/sql/: README.md
scripts/sql/imdb/: 01_init_schema.sql
scripts/sql/main/: 01_init_pgvector.sql  02_init_schema.sql
src/: __main__.py  settings.py
src/api/: __init__.py  database.py  main.py  schemas.py
src/api/dependencies/: auth.py  rate_limit.py
src/api/routers/: chat.py  films.py
src/api/services/: jwt_service.py  password_service.py
src/database/: __init__.py  connection.py  importer.py  init_schema.sql  models.py
src/database/importer/: __init__.py  embedding_service.py  rag_importer.py
src/database/models/: __init__.py  audit.py  base.py  film.py  production.py  rotten_tomatoes.py  youtube.py
src/database/repositories/: __init__.py  base.py  credit.py  etl.py  film.py  genre.py  keyword.py  production.py  video.py
src/etl/: __init__.py  aggregator.py  config.py  main.py  pipeline.py  polars_processor.py  settings.py  types.py  utils.py
src/etl/aggregation/: __init__.py  aggregator.py  deduplicator.py  merger.py  schemas.py  score_calculator.py
src/etl/extractors/: __init__.py  base.py  base_extractor.py  csv_reader.py  kaggle_downloader.py  kaggle_extractor.py  postgres_extractor.py  rotten_tomatoes_enricher.py  spark_extractor.py  spotify_extractor.py  tmdb_extractor.py  wikipedia_scraper.py  youtube_extractor.py
src/etl/loaders/: __init__.py  base.py
src/etl/pipeline/: __init__.py  cli.py  helpers.py  imdb.py  kaggle.py  orchestrator.py  rotten_tomatoes.py  spark.py  steps.py  tmdb.py
src/etl/pipelines/: __init__.py  aggregation.py  imdb.py  kaggle.py  main.py  rotten_tomatoes.py  spark.py  tmdb.py
src/etl/types/: __init__.py  imdb.py  kaggle.py  normalized.py  pipeline.py  rotten_tomatoes.py  spark.py  tmdb.py  youtube.py
src/etl/utils/: __init__.py  checkpoint_manager.py  logger.py
src/frontend/: .env.development  .env.production  .eslintrc.cjs  admin.html  chatbot.html  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.ts
src/frontend/e2e/: accessibility.spec.ts  auth.spec.ts  (+5 more)
src/integration/: README.md  index.html
src/monitoring/: __init__.py  logging_config.py  metrics.py  middleware.py
src/scripts/: __init__.py  import_imdb.py  init_database.py  init_models.py
src/services/: __init__.py
src/settings/: __init__.py  ai.py  api.py  base.py  database.py  retrieval.py
tests/: conftest.py  test_setup.py
tests/api/: test_schemas.py
tests/data/: ab_queries_fr.jsonl
tests/etl/: conftest.py  test_fresh_install_flow.py
tests/fixtures/: axis2_benchmark.json  benchmark_full.json  intent_test_cases.json  mock_llm_responses.json  rag_test_queries.json
tests/integration/: conftest.py  test_admin_access.py  test_auth_flow.py  test_chat_api.py  test_chat_sse.py  test_films_api.py  test_rag_pipeline.py  test_register.py  test_session_manager.py
tests/migrations/: conftest.py  test_backfill_multilingual.py  test_regenerate_embeddings_20260416.py
tests/model/: conftest.py  test_data_validation.py  test_embedding_quality.py  test_intent_accuracy.py  test_response_quality.py
tests/monitoring/: test_logging.py  test_metrics.py  test_middleware.py
tests/services/: test_intent_classifier.py  test_llm_service.py
tests/settings/: __init__.py  test_ai_settings.py  test_base_settings.py  test_settings_init.py  test_sources_settings.py
tests/unit/: conftest.py  test_embedding_service.py  test_intent_router.py  test_prompt_builder.py  test_rag_pipeline.py  test_reranker.py  test_retriever.py  test_session_manager.py
(+233 files in other folders)
