[project]
name = "horrorbot"
version = "1.0.0"
description = "Chatbot spécialisé films d'horreur avec architecture RAG"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

# =============================================================================
# Dépendances principales (CI-compatible, légères)
# =============================================================================
dependencies = [
    # --- Core Web Framework ---
    "fastapi==0.124.4",
    "fastapi_cors==0.0.6",
    "starlette==0.50.0",
    "uvicorn==0.38.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pydantic_core==2.41.5",

    # --- Database ---
    "SQLAlchemy==2.0.45",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.11",
    "alembic==1.17.2",
    "pgvector==0.4.2",

    # --- HTTP & Async ---
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "aiohttp==3.13.2",
    "aiofiles==25.1.0",
    "anyio==4.12.0",
    "requests==2.32.5",

    # --- Auth & Security ---
    "bcrypt==5.0.0",
    "passlib==1.7.4",
    "PyJWT==2.10.1",
    "python-jose==3.5.0",
    "cryptography==46.0.3",

    # --- Rate Limiting ---
    "slowapi==0.1.9",
    "limits==5.6.0",

    # --- Data Processing (léger) ---
    "pandas==2.3.3",
    "polars==1.36.1",
    "numpy==2.3.5",
    "openpyxl==3.1.5",

    # --- Web Scraping ---
    "beautifulsoup4==4.14.3",
    "Crawl4AI==0.7.7",
    "lxml==5.4.0",

    # --- Utilities ---
    "python-dotenv==1.2.1",
    "structlog==25.5.0",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "PyYAML==6.0.3",
    "Jinja2==3.1.6",
    "orjson==3.11.5",

    # --- YouTube & APIs ---
    "youtube-transcript-api==1.2.3",
    "kaggle==1.8.2",

    # --- Monitoring ---
    "prometheus_client==0.23.1",

    # --- SSE Streaming ---
    "sse-starlette",
]

# =============================================================================
# Groupes de dépendances
# =============================================================================
[dependency-groups]

# --- Outils de test et développement ---
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.0.2",
    "pytest-env>=1.1.0",
    "pytest-dotenv>=0.5.0",
    "pytest-sugar>=1.0.0",
    "pytest-testdox>=3.1.0",
    "pytest-html>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "coverage>=7.4.0",
    "Faker>=23.0.0",
    "pre-commit>=3.0.0",
]

# --- Dépendances ML lourdes (local/production uniquement, PAS en CI) ---
ml = [
    # ML & Deep Learning
    "torch>=2.9.0,<3.0",
    "transformers==4.57.3",
    "sentence-transformers==5.2.0",
    "tokenizers==0.22.1",
    "safetensors==0.7.0",

    # LLM (local inference)
    "llama-cpp-python==0.3.16",

    # Hugging Face
    "huggingface-hub==0.36.0",
    "hf-xet==1.2.0",

    # Scientific Computing (heavy)
    "scipy==1.16.3",
    "scikit-learn==1.8.0",

    # Browser Automation (heavy)
    "playwright==1.57.0",
    "patchright==1.56.0",
    "selenium==4.38.0",

    # Spark (heavy)
    "pyspark==4.0.1",
    "py4j==0.10.9.9",
]

# =============================================================================
# Configuration uv
# =============================================================================
[tool.uv]
# Installer dev par défaut (pas ml, trop lourd)
default-groups = ["dev"]

# Index PyTorch CUDA
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# Index llama-cpp-python CUDA wheels
[[tool.uv.index]]
name = "llama-cpp-python-cu124"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
explicit = true

# Router packages vers les index CUDA
[tool.uv.sources]
torch = { index = "pytorch-cu126" }
llama-cpp-python = [
    { index = "llama-cpp-python-cu124", marker = "sys_platform == 'linux'" },
    { url = "https://github.com/dougeeai/llama-cpp-python-wheels/releases/download/v0.3.16-cuda13.0-sm89-py312/llama_cpp_python-0.3.16%2Bcuda13.0.sm89.ada-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
]

# =============================================================================
# Build system
# =============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# Configuration des outils
# =============================================================================
[tool.vulture]
min_confidence = 100
paths = ["src", "tests"]
ignore_names = ["cls", "kwargs", "valid_env", "*_env_vars"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"src/database/repositories/base.py" = ["UP046"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = "."

# Configuration de la couverture sur tout le dossier src
addopts = """
    -v
    --strict-markers
    --cov=src
    --cov-report=html
    --cov-report=term-missing
    --cov-fail-under=50
    -p no:warnings
    --tb=short
"""

asyncio_mode = "auto"
env_files = [".env.test"]

markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests requiring network"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "src/scripts/*",
    "src/etl/pipelines/*",
    "src/etl/extractors/tmdb/tmdb.py",
    "src/etl/extractors/tmdb/client.py",
    "src/etl/loaders/tmdb/tmdb.py",
    "src/etl/loaders/tmdb/reference.py",
    "src/etl/loaders/tmdb/association.py",
    "src/database/connection.py",
    "src/settings.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
